# trash

./: 6.2.trj  CMakeLists.txt  README.md  file.cc  frenet_planner_node (1).cpp  inner.trj  map.trj  map.yaml  opt.trj  opt1 (1).trj  opt2.trj  opt4.2.trj  opt4.trj  opt5.2.trj  opt6.3.trj  opt6.trj  opt7.2.trj  opt7.trj  opt_central.trj  outer.trj  pp_fren.cpp  purepursuit_node.cc  purepursuit_node.h
b/: CMakeCache.txt  Makefile  cmake_install.cmake  frenet_test
cfg/: params.json
demo/: test.cpp
include/: cubic_spline_planner.hpp  debug.h  frenet_optimal_trajectory.hpp  polynomials.hpp
include/cpp_common_structs/: structures.hpp
map/: inner.trj  map.pgm  map.trj  map.yaml  opt.trj  opt5.3.trj  opt5.trj  opt7.3.trj  outer.trj
src/: 2final.cu  cubic_spline_planner.cpp  frenet_optimal_trajectory.cpp  frenet_optimal_trajectory.cu  pre ott mem.cu  pre_ottimizzazione.cu  unicaAsy.cu
